Add https for site_media

--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -35,20 +35,30 @@ server {
 
     location / {
         proxy_pass http://frontend/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /api/ {
         proxy_pass http://backend/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /site_media/ {
+        proxy_pass http://cabel-torg-test-domain.net.by:8010/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /test/ {
         alias /usr/share/nginx/html/;
     }
 
-     include /etc/letsencrypt/options-ssl-nginx.conf;
-     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
 
 server {
@@ -68,14 +78,24 @@ server {
 
     location / {
         proxy_pass http://admin_dashboard/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /api/ {
         proxy_pass http://backend/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-     include /etc/letsencrypt/options-ssl-nginx.conf;
-     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-     ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-     ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+    location /site_media/ {
+        proxy_pass http://cabel-torg-test-domain.net.by:8010/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
 }
