--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,9 +76,7 @@ services:
 
   reverse_proxy: # Copy static files during building this container
     container_name: 'prod_reverse_proxy'
-    build:
-      context: .
-      dockerfile: ./reverse_proxy/Dockerfile
+    image: nginx:stable-alpine
     restart: always
     ports:
       - '80:80'
