--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -20,18 +20,18 @@ server {
 
 server {
     listen 80;
-    server_name cabel-torg-test-domain.net.by;
+    server_name cabel-torg.by;
 
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    return 301 https://cabel-torg-test-domain.net.by$request_uri;
+    return 301 https://cabel-torg.by$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name cabel-torg-test-domain.net.by;
+    server_name cabel-torg.by;
 
     location / {
         proxy_pass http://frontend/;
@@ -46,7 +46,7 @@ server {
     }
 
     location /site_media/ {
-        proxy_pass http://cabel-torg-test-domain.net.by:8010/;
+        proxy_pass http://cabel-torg.by:8010/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
@@ -57,24 +57,24 @@ server {
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg.by/privkey.pem;
 }
 
 server {
     listen 80;
-    server_name admin.cabel-torg-test-domain.net.by;
+    server_name admin.cabel-torg.by;
 
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    return 301 https://admin.cabel-torg-test-domain.net.by$request_uri;
+    return 301 https://admin.cabel-torg.by$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name admin.cabel-torg-test-domain.net.by;
+    server_name admin.cabel-torg.by;
 
     location / {
         proxy_pass http://admin_dashboard/;
@@ -89,13 +89,13 @@ server {
     }
 
     location /site_media/ {
-        proxy_pass http://cabel-torg-test-domain.net.by:8010/;
+        proxy_pass http://cabel-torg.by:8010/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    ssl_certificate /etc/letsencrypt/live/cabel-torg-test-domain.net.by/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cabel-torg-test-domain.net.by/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg.by/privkey.pem;
 }
