--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,21 @@
-name: CD
+name: Deploy with Docker Compose
 
 on:
   push:
     branches: [ "master" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 jobs:
-  create-envfile:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 'Create an env file'
-        run: echo '${{ secrets.CABEL_TORG_ENV_DEV }}' > backend/.env.dev
+  deploy:
+    runs-on: self-hosted
 
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Rebuild conainers
-        run: docker-compose -f docker-compose.dev.yaml up --build -d
+      - name: Go to root dir of project
+        run: cd /root/cabel_torg/
+
+      - name: Get actual version of master branch
+        run: git pull
+
+      - name: Rebuild and restart containers
+        run: docker-compose up --build -d
