--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: 'prod_db'
     image: postgres:15.1
     env_file:
-      - backend/.env.dev
+      - backend/.env
     ports:
       - '5434:5432'
     volumes:
