--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     ports:
       - '5434:5432'
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data/
-      - ./data/backups/db_dumps:/backups/
+      - /data/postgres:/var/lib/postgresql/data/
+      - /data/backups/db_dumps:/backups/
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
@@ -28,7 +28,7 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./data/parser_files:/parser_files
+      - /data/parser_files:/parser_files
 
   backend:
     container_name: 'prod_backend'
@@ -42,7 +42,7 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./data/site_media:/site_media
+      - /data/site_media:/site_media
       - ./backend:/backend
 
 #  redis:
@@ -88,10 +88,10 @@ services:
       admin_dashboard:
         condition: service_started
     volumes:
-      - ./data/site_media:/usr/share/nginx/site_media/
+      - /data/site_media:/usr/share/nginx/site_media/
       - ./reverse_proxy/prod.conf:/etc/nginx/conf.d/prod.conf
-      - ./data/certbot/www:/var/www/certbot  # certbot
-      - ./data/certbot/conf:/etc/letsencrypt  # certbot
+      - /data/certbot/www:/var/www/certbot  # certbot
+      - /data/certbot/conf:/etc/letsencrypt  # certbot
 
   certbot:
     container_name: 'prod_certbot'
@@ -106,5 +106,5 @@ services:
       reverse_proxy:
         condition: service_started
     volumes:
-      - ./data/certbot/www:/var/www/certbot
-      - ./data/certbot/conf:/etc/letsencrypt
+      - /data/certbot/www:/var/www/certbot
+      - /data/certbot/conf:/etc/letsencrypt
