--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - '5434:5432'
     volumes:
       - /data/postgres:/var/lib/postgresql/data/
-      - /data/backups/db_dumps:/backups/
+      - /backups/db_dumps:/backups/
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
