Add logging for parsing

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -9,15 +9,19 @@ DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_HOST=
 DATABASE_PORT=
-IMAGES_PATH=
-STATIC_PATH=
+
+IMAGES_URL=
+STATIC_URL=
+SITE_HOST=
+
 ADMINISTRATOR_EMAIL=
+SERVICE_EMAIL=
 
 CORS_ALLOWED_HEADERS=*
 ORIGINS=*
 DEBUG=1
 
-SITE_HOST=
+DEFAULT_TAX=
 
 # SMTP
 SMTP_EMAIL_SENDER=no-reply@domain.com
