--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -22,6 +22,10 @@ server {
     listen 80;
     server_name cabel-torg.by;
 
+    location = /robots.txt {
+       alias /usr/share/nginx/robots.txt;
+    }
+
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -64,6 +68,10 @@ server {
 server {
     listen 80;
     server_name admin.cabel-torg.by;
+
+    location = /robots.txt {
+       alias /usr/share/nginx/robots.txt;
+    }
 
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
