Add: robots.txt

--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -33,6 +33,10 @@ server {
     listen 443 ssl;
     server_name cabel-torg.by;
 
+    location /robots.txt {
+        alias /usr/share/nginx/robots.txt;
+    }
+
     location / {
         proxy_pass http://frontend/;
         proxy_set_header Host $host;
@@ -76,6 +80,10 @@ server {
 server {
     listen 443 ssl;
     server_name admin.cabel-torg.by;
+
+    location /robots.txt {
+        alias /usr/share/nginx/robots.txt;
+    }
 
     location / {
         proxy_pass http://admin_dashboard/;
