--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -37,7 +37,7 @@ server {
         alias /usr/share/nginx/robots.txt;
     }
 
-    location / {
+    location = / {
         proxy_pass http://frontend/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -85,7 +85,7 @@ server {
         alias /usr/share/nginx/robots.txt;
     }
 
-    location / {
+    location = / {
         proxy_pass http://admin_dashboard/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
