Fix: path to robots.txt

--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -33,11 +33,11 @@ server {
     listen 443 ssl;
     server_name cabel-torg.by;
 
-    location /robots.txt {
+    location = /robots.txt {
         alias /usr/share/nginx/robots.txt;
     }
 
-    location = / {
+    location / {
         proxy_pass http://frontend/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -81,11 +81,11 @@ server {
     listen 443 ssl;
     server_name admin.cabel-torg.by;
 
-    location /robots.txt {
+    location = /robots.txt {
         alias /usr/share/nginx/robots.txt;
     }
 
-    location = / {
+    location / {
         proxy_pass http://admin_dashboard/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
