--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -37,6 +37,10 @@ server {
         alias /usr/share/nginx/robots.txt;
     }
 
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
         proxy_pass http://frontend/;
         proxy_set_header Host $host;
@@ -83,6 +87,10 @@ server {
 
     location = /robots.txt {
         alias /usr/share/nginx/robots.txt;
+    }
+
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
     location / {
