Change: increase a size of files can be uploaded

--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -84,6 +84,7 @@ server {
 server {
     listen 443 ssl;
     server_name admin.cabel-torg.by;
+    client_max_body_size 10M;
 
     location = /robots.txt {
         alias /usr/share/nginx/robots.txt;
