Change nginx conf

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -95,6 +95,7 @@ services:
       - /data/site_media:/usr/share/nginx/site_media/
       - ./reverse_proxy/prod.conf:/etc/nginx/conf.d/prod.conf
       - ./reverse_proxy/robots.txt:/usr/share/nginx/robots.txt
+      - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
       - /data/certbot/www:/var/www/certbot  # certbot
       - /data/certbot/conf:/etc/letsencrypt  # certbot
 
