--- a/ssr/package.json
+++ b/ssr/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.11.0",
     "axios": "^0.26.1",
+    "dompurify": "^3.2.6",
     "pinia": "^3.0.2",
     "vue-gtag": "^2.0.1",
     "yandex-metrika-module-nuxt3": "^1.5.3"
