Add www redirect

--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -20,7 +20,7 @@ server {
 
 server {
     listen 80;
-    server_name cabel-torg.by;
+    server_name cabel-torg.by www.cabel-torg.by;
 
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -28,6 +28,18 @@ server {
 
     return 301 https://cabel-torg.by$request_uri;
 }
+
+server {
+    listen 443 ssl;
+    server_name www.cabel-torg.by;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/cabel-torg.by/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cabel-torg.by/privkey.pem;
+
+    return 301 https://cabel-torg.by$request_uri;
+}
+
 
 server {
     listen 443 ssl;
