--- a/reverse_proxy/prod.conf
+++ b/reverse_proxy/prod.conf
@@ -65,6 +65,22 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location ~* ^/site_media/.*\.(pdf|docx?)$ {
+        add_header X-Robots-Tag "noindex, nofollow";
+        rewrite ^/site_media/(.*)$ /$1 break;
+        proxy_pass http://cabel-torg.by:8010;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location ~* ^/site_media/.*\.(?:jpg|jpeg|png|webp|svg|gif|css|js|woff2?|ttf|eot|ico)$ {
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        rewrite ^/site_media/(.*)$ /$1 break;
+        proxy_pass http://cabel-torg.by:8010;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /site_media/ {
         proxy_pass http://cabel-torg.by:8010/;
         proxy_set_header Host $host;
